feat(DocViz sesión 1): pgvector, Firestore chat, scripts de limpieza y UI workspace
Incluye almacén vectorial PostgreSQL, persistencia de conversaciones en Firestore,
historial RAG, health de Firestore, docker-compose y script Python cleanup_dev_data
para vaciar docviz_vector_chunk y colecciones users/_system. Ajustes de frontend
(consulta, indexación a ancho completo). Ignorar claves firebase-adminsdk en .gitignore.

Made-with: Cursor